src/rfx/tests/preprocessor/ConditionalDiagnostics.approved.out
exit_status:0
output:
Source output:
    #line 1 "D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/ConditionalDiagnostics.rfx"
    
Diagnostic output:
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/ConditionalDiagnostics.rfx:4:2: error: #else without #if
    #else // directive without '#if'
     ^
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/ConditionalDiagnostics.rfx:6:2: error: #elif without #if
    #elif // directive after else 
     ^
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/ConditionalDiagnostics.rfx:9:2: error: unterminated conditional directive
    #ifdef UNDEFINED
     ^
