src/rfx/tests/preprocessor/ConditionalDiagnostics.rfx
// :RUN_RFXC -P %STD_OUTPUT% %INPUT% 
// Diagnostic Error Testing for 'Conditionals'

#else // directive without '#if'

#elif // directive after else 

// Testing EOF while conditional processing 
#ifdef UNDEFINED
Skip this
